<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >

    <Spinner
        android:id="@+id/spSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:entries="@array/size_array"
        android:prompt="@string/select_size" />

    <Spinner
        android:id="@+id/spImageType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spColour"
        android:layout_below="@+id/spColour"
        android:entries="@array/imageType_array"
        android:prompt="@string/select_type" />

    <Spinner
        android:id="@+id/spColour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spSize"
        android:layout_below="@+id/spSize"
        android:entries="@array/colour_array"
        android:prompt="@string/select_colour" />

    <TextView
        android:id="@+id/tvChildSafety"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spImageType"
        android:layout_centerVertical="true"
        android:text="@string/child_safety"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/cbChildSafety"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvChildSafety"
        android:layout_alignBottom="@+id/tvChildSafety"
        android:layout_alignRight="@+id/etSiteName" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnSaveSettings"
        android:layout_alignBottom="@+id/btnSaveSettings"
        android:layout_alignLeft="@+id/tvChildSafety"
        android:text="@string/reset_settings" />

    <Button
        android:id="@+id/btnSaveSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/spImageType"
        android:layout_marginBottom="40dp"
        android:text="@string/save_settings" />

    <EditText
        android:id="@+id/etSiteName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cbChildSafety"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:ems="10"
        android:hint="@string/site_name" />

</RelativeLayout>